# problems-rust

./: .gitignore  Cargo.toml  README.md
aoc2019/: Cargo.toml
aoc2019/src/: lib.rs  main.rs
aoc2020/: Cargo.toml
aoc2020/src/: lib.rs  main.rs
aoc2020/src/etc/day19/: day19  day19_1.pest  day19_2.pest  gen  part1.pl  part2.pl  test_1.pest  test_2.pest
aoc2021/: Cargo.toml
samples/: Cargo.toml
samples/src/: main.rs
scratch/: Cargo.toml  notes.md
scratch/src/: main.rs
