[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Justin Wong <jusw85@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1"
num = "0.3"
itertools = "0.10.0"
pest = "^2.0"
pest_derive = "^2.0"

[dev-dependencies]
assert_matches = "1.4"
