[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Justin Wong <jusw85@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
regex = "1.5"
num = "0.4"
itertools = "0.10.2"

[dev-dependencies]
assert_matches = "1.5"
